--- a/appsettings.json
+++ b/appsettings.json
@@ -8,13 +8,13 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-     "DefaultConnection": "server=146.59.126.32;port=3306;uid=user;pwd=Yg5udzLxxw9ADsT;database=elaborate-test"
+     "DefaultConnection": //" Your connection string"
   },
   "EmailConfiguration": {
-    "From": "elaborate2024@gmail.com",
+    "From": //"Your email",
     "SmtpServer": "smtp.gmail.com",
     "Port": 465,
-    "Username": "elaborate2024@gmail.com",
-    "Password": "gyenjxirctihbsys"
+    "Username": //"Your userName",
+    "Password": //"Your Password"
   }
 }
